--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<table border="2">
+		 <caption>Student Details</caption>
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>AGE</th>
+				<th>BRANCH</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Rahul</td>
+				<td>23</td>
+				<td>BCA</td>
+			</tr>
+			<tr>
+				<td>Sunil</td>
+				<td>23</td>
+				<td>BBA</td>
+			</tr>
+			<tr>
+				<td>Raj</td>
+				<td>25</td>
+				<td>MCA</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
